@@ -15,6 +15,7 @@ Additions
 11/02/11 r416 Added support for ircd-rizon
 
 Changes
+12/07/18 Fixed persistent channel support by actually setting the modes in the protocols.
 12/07/18 Applied denora_automode to several protocols
 12/07/18 Moved automode handler into a separate void and marked some todo's regarding it for later
 12/07/18 Added automode handler for logchannel into inspircd11
